--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1668,6 +1668,10 @@ ul.nav.active {
   justify-content: center;
 }
 
+.map .map__social-networks .link:nth-child(1) {
+  padding-right: 25px;
+}
+
 .map .map__social-networks .link:nth-child(2) {
   margin: 0;
 }
@@ -1680,12 +1684,18 @@ ul.nav.active {
   }
   
   footer .footer__contacts .block:nth-child(1) {
-    margin: 0 0 20px 0;
+    margin-right: 0;
+    margin-left: 0;
+    margin: 0 auto;
+    margin-bottom: 20px;
+
   }
 
   footer .footer__contacts .block {
     flex-wrap: wrap;
     text-align: center;
+    justify-content: center;
+    margin: 0 auto;
   }
 
   .footer__contacts .block p.number {
