--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1197,7 +1197,6 @@ footer .footer__contacts .block .title {
 
 ul.nav {
   position: fixed;
-  top: 0;
   left: 0;
   width: 100%;
   height: 50%;
@@ -1205,13 +1204,17 @@ ul.nav {
   z-index: 1;
   justify-content: center;
   padding: 100px 0;
-  display: none;
+  display: block;
   border: none;
   border-radius: 0 0 60px 60px;
+  transition: all 0.3s ease 0s;
+  top: -50%;
 }
 
 ul.nav.active {
+  top: 0;
   display: block;
+  transition: all 0.3s ease 0s;
 }
 
 .nav__element {
@@ -1219,6 +1222,7 @@ ul.nav.active {
   width: 20%;
   text-align: center;
   margin-bottom: 10px;
+  width: 100%;
 }
 
 /* burger */
@@ -1230,7 +1234,6 @@ ul.nav.active {
   height: 20px;
   z-index: 2;
   top: 54px;
-  transition: all 5s ease;
   float: right;
 }
 
@@ -1724,13 +1727,20 @@ ul.nav.active {
   }
   .ABOUTUS-PAGE-- .banner {
     width: 98%;
-    margin: 0 2%;
+    margin: 0 1%;
     margin-bottom: 30px;
     justify-content: center;
   }
 
   .ABOUTUS-PAGE-- .banner .banner__text-block {
-    padding: 0 0 0 20%;
+    text-align: center;
+    width: 100%;
+    padding: 0;
+  }
+
+  .ABOUTUS-PAGE-- .banner__text-block p:nth-child(2) {
+    margin-right: 0;
+    width: 100%;
   }
 
 /* hotel preview */  
