--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -15,6 +15,11 @@ ol[class] {
   padding: 0;
 }
 
+a {
+  text-decoration: none;
+  color: #000000;
+}
+
 p {
   font-weight: 300;
   font-size: 14px;
